feat: add option to hide zero value operations to avoid poisoning address attack

--- a/apps/ledger-live-desktop/static/i18n/en/app.json
+++ b/apps/ledger-live-desktop/static/i18n/en/app.json
@@ -3973,6 +3973,10 @@
       "fullNode": {
         "title": "Connect Bitcoin full node",
         "desc": "Set up your Bitcoin full node to synchronize and send transactions without using Ledger’s explorers."
+      },
+      "hideZeroValueOperation": {
+        "title": "Hide zero value operations",
+        "desc": "You can hide zero value operations."
       }
     }
   },
