--- a/apps/ledger-live-desktop/static/i18n/ru/app.json
+++ b/apps/ledger-live-desktop/static/i18n/ru/app.json
@@ -541,7 +541,7 @@
     },
     "resetThirdPartyDataModal" : {
       "title" : "Удалите данные посредников",
-      "subtitle" : "Удалите данные посредников. Чтобы получить доступ к услугам наших партнёров, вам может потребоваться заново пройти KYC и/или войти.",
+      "subtitle" : "Удалите данные посредников. Чтобы пользоваться услугами сторонних операторов, может потребоваться заново пройти KYC и/или авторизоваться.",
       "cta" : "Подтвердить"
     },
     "modal" : {
@@ -824,7 +824,20 @@
       "delegation" : {
         "title" : "Если вы не знали...",
         "description" : "Валидатор Ledger может застейкать ваши {{asset}} с комиссией в {{commission}}%.",
-        "cta" : "Застейкать в Ledger"
+        "cta" : "Застейкать в Ledger",
+        "linkText" : "Подробнее",
+        "ethereum" : {
+          "lido" : {
+            "title" : "Если вы не знали...",
+            "description" : "Стейкайте ETH в Lido и получайте вознаграждения. Без блокировки и минимальной суммы.",
+            "cta" : "Стейкинг с Lido"
+          },
+          "kiln" : {
+            "title" : "Не ограничивайтесь ходлом. Приумножайте ETH",
+            "description" : "У вас больше 32 ETH? Тогда наслаждайтесь безопасным стейкингом эфиров в Kiln и получайте пассивный доход.",
+            "cta" : "Стейкинг с Kiln"
+          }
+        }
       }
     }
   },
@@ -1300,7 +1313,7 @@
     },
     "buyCrypto" : {
       "title" : "Покупка криптовалюты",
-      "description" : "Покупайте криптовалюты через наших партнёров и получайте их прямо на счёт в Ledger",
+      "description" : "Покупайте криптовалюты через сторонних операторов и получайте их на счёт в Ledger",
       "cta" : "Купить"
     },
     "familyPack" : {
@@ -1314,7 +1327,7 @@
     },
     "sell" : {
       "title" : "Продажа криптовалюты",
-      "description" : "Продавайте биткойны через наших партнёров прямо в Ledger Live"
+      "description" : "Продавайте BTC через сторонних операторов прямо в Ledger Live"
     },
     "stakeAlgorand" : {
       "title" : "Стейкинг ALGORAND",
@@ -1322,7 +1335,7 @@
     },
     "swap" : {
       "title" : "Обмен криптовалют",
-      "description" : "Обменивайте одну криптовалюту на другую в Ledger Live посредством наших партнёров"
+      "description" : "Обменивайте криптовалюты между собой в Ledger Live через сторонних операторов"
     },
     "lending" : {
       "title" : "Кредиты в криптовалюте",
@@ -1399,7 +1412,7 @@
         "label" : "Популярно"
       },
       "earn" : {
-        "title" : "Приумножить",
+        "title" : "Стейкинг",
         "description" : "Приумножайте криптовалюты вместе с Ledger"
       }
     }
@@ -1461,7 +1474,7 @@
       "crypto" : "Криптовалюты",
       "price" : "Цена",
       "change" : "Изменение",
-      "marketCap" : "Рын. капитализация",
+      "marketCap" : "Капитализация",
       "last7d" : "За 7 дней"
     },
     "detailsPage" : {
@@ -1834,7 +1847,7 @@
         "title" : "Сортировка",
         "name_asc" : "Название А-Я",
         "name_desc" : "Название Я-А",
-        "marketcap_desc" : "Рын. капитализация"
+        "marketcap_desc" : "Капитализация"
       },
       "installSuccess" : {
         "title" : "Приложение успешно установлено. Теперь можно создавать счета {{app}}",
@@ -2129,15 +2142,15 @@
           "description" : "Стейкайте ATOM с помощью надёжного валидатора Ledger. Монеты остаются вашими, а их безопасность обеспечивает Ledger."
         },
         "osmo" : {
-          "title" : "Приумножайте OSMO. Стейкайте с валидатором «Ledger by Figment».",
+          "title" : "Приумножайте OSMO. Стейкайте с валидатором «Ledger by Figment»",
           "description" : "Стейкайте OSMO через валидатора «Ledger by Figment». У него самые низкие комиссии и страховка от слэшинга!"
         },
         "solana" : {
-          "title" : "Приумножайте SOL. Стейкайте с помощью валидатора «Ledger by Figment».",
+          "title" : "Приумножайте SOL. Стейкайте с помощью валидатора «Ledger by Figment»",
           "description" : "Стейкайте SOL с помощью валидатора «Ledger by Figment» Монеты остаются вашими, а их безопасность обеспечивает Ledger."
         },
         "celo" : {
-          "title" : "Приумножайте CELO. Стейкайте с помощью валидатора «Ledger by Figment».",
+          "title" : "Приумножайте CELO. Стейкайте с помощью валидатора «Ledger by Figment»",
           "description" : "Стейкайте CELO с помощью валидатора «Ledger by Figment» Он обладает страховкой от слэшинга и бонусом в виде бескомпромиссной безопасности Ledger."
         }
       }
@@ -2154,7 +2167,7 @@
       },
       "amount" : {
         "title" : "Сумма",
-        "banner" : "Сколько можно отправить",
+        "banner" : "Вы можете отправить",
         "fees" : "Макс. ориентировочная комиссия",
         "standard" : "Обычная",
         "advanced" : "Дополнительно",
@@ -2238,7 +2251,7 @@
     "no" : "Мне не хочется"
   },
   "deviceLocalization" : {
-    "language" : "Язык интерфейса",
+    "language" : "Язык устройства",
     "deviceLanguage" : "Язык устройства",
     "changeLanguage" : "Поменять язык",
     "changeDeviceLanguage" : "Поменять язык устройства?",
@@ -3472,6 +3485,71 @@
       "providerLink" : "Подробнее о {{provider}}"
     }
   },
+  "avalanchepchain" : {
+    "account" : {
+      "subHeader" : {
+        "cardTitle" : "Powered by Figment",
+        "moreInfo" : "Подробнее",
+        "drawerTitle" : "Powered by Figment",
+        "title" : "Токен AVAX теперь доступен в Ledger Live",
+        "description" : "Теперь вы можете управлять своими токенами AVAX и хранить их в Ledger Live.",
+        "website" : "Powered by Figment"
+      }
+    },
+    "stakedBalance" : "Стейкинг",
+    "stakedBalanceTooltip" : "Сумма в стейкинге с валидаторами.",
+    "delegation" : {
+      "header" : "Назначения",
+      "add" : "Дополнить",
+      "commission" : "Комиссия",
+      "validator" : "ID ноды",
+      "startTime" : "Начало стейкинга",
+      "endTime" : "Конец стейкинга",
+      "stakeAmount" : "Стейкинг",
+      "potentialReward" : "Возможное вознаграждение",
+      "emptyState" : {
+        "description" : "Вы можете получать вознаграждения в токенах AVAX, делегируя активы.",
+        "info" : "Как работает делегирование",
+        "delegation" : "Получить вознаграждения"
+      },
+      "notEnoughToDelegate" : "Для делегирования требуется не менее 25 AVAX, доступных в цепочке P-Chain.",
+      "validatorStake" : "Доля валидатора",
+      "validatorRemainingStake" : "Доступно",
+      "flow" : {
+        "title" : "Делегировать",
+        "steps" : {
+          "starter" : {
+            "description" : "Вы можете получать вознаграждения, делегируя AVAX валидатору.",
+            "bullet" : ["Делегированные активы остаются в вашей собственности", "Делегируйте прямо на устройстве Ledger", "Для стейкинга необходимо не менее 25 AVAX", "AVAX делегируются как минимум на две недели"]
+          },
+          "amount" : {
+            "title" : "Сумма"
+          },
+          "validator" : {
+            "title" : "Валидаторы",
+            "ledgerByFigmentTC" : "Положения и условия Ledger by Figment"
+          },
+          "endDate" : {
+            "title" : "Дата окончания",
+            "text" : "Выберите время окончания делегирования. Дата окончания должна быть в пределах от {{minEndDate}} и до {{maxEndDate}}.",
+            "label" : "Дата окончания делегирования"
+          },
+          "connectDevice" : {
+            "title" : "Устройство"
+          },
+          "confirmation" : {
+            "title" : "Подтверждение",
+            "success" : {
+              "title" : "Вы успешно делегировали активы",
+              "text" : "Баланс обновится после подтверждения транзакции в блокчейне.",
+              "cta" : "Подробнее"
+            },
+            "broadcastError" : "Возможно, ваша транзакция не прошла. Пожалуйста, подождите немного и проверьте историю транзакций, прежде чем повторить попытку."
+          }
+        }
+      }
+    }
+  },
   "near" : {
     "account" : {
       "stakedBalance" : "Стейкается",
@@ -3623,7 +3701,7 @@
     "durationDays" : "{{count}} дн.",
     "durationDays_plural" : "{{count}} дн.",
     "howItWorks" : "Как работает делегирование",
-    "delegationEarn" : "Теперь вы можете получать вознаграждение за стейкинг {{name}}, делегируя свои активы.",
+    "delegationEarn" : "Вы можете получать вознаграждение за стейкинг, если делегируете активы.",
     "earnRewards" : "Получить вознаграждения",
     "overdelegated" : "Превышен лимит делегирования",
     "status" : "Статус",
@@ -3776,7 +3854,9 @@
       "runLocalAppDeleteButton" : "Удалить",
       "runLocalAppOpenButton" : "Открыть",
       "enableLearnStagingUrl" : "Промежуточный URL страницы Образование",
-      "enableLearnStagingUrlDesc" : "Включить промежуточный URL-адрес для страницы Образование."
+      "enableLearnStagingUrlDesc" : "Включить промежуточный URL-адрес для страницы Образование.",
+      "openOnboardingAppInstallDebug" : "Запуск приложения настройки с экраном отладки",
+      "openOnboardingAppInstallDebugDesc" : "Открыть экран с компонентами из шага синхронизации приложения настройки."
     },
     "currencies" : {
       "selectPlaceholder" : "Выберите актив",
@@ -3913,7 +3993,7 @@
       "button" : "Исправить"
     },
     "exportLogs" : {
-      "title" : "Сохранение логов",
+      "title" : "Сохранить логи",
       "desc" : "Загрузка логов Ledger Live может помочь для устранения неполадок.",
       "btn" : "Сохранить"
     },
@@ -4175,7 +4255,7 @@
           },
           "3" : {
             "title" : "Ввести фразу восстановления на новом устройстве",
-            "description" : "Воспользуйтесь мнемонической фразой, чтобы восстановить приватные ключи на новом Nano!"
+            "description" : "Воспользуйтесь мнемонической фразой, чтобы восстановить приватные ключи на новом Nano."
           }
         }
       },
@@ -4423,7 +4503,7 @@
           "genuineCheck" : {
             "success" : {
               "title" : "Отлично!",
-              "desc" : "Подлинность вашего {{deviceName}} подтверждена. Теперь вы можете использовать его в Ledger Live."
+              "desc" : "Ваш кошелёк Ledger {{deviceName}} подлинный. Теперь его можно использовать в Ledger Live."
             },
             "buttons" : {
               "next" : "Продолжить",
@@ -5043,7 +5123,7 @@
       "install" : {
         "title" : "Прервать установку приложения?",
         "description" : "При выходе из вкладки «Мой Ledger» установка приложения прервётся. Дождитесь завершения, чтобы установить приложения из очереди.",
-        "stay" : "Подождать"
+        "stay" : "Дождаться"
       },
       "uninstall" : {
         "title" : "Прервать удаление приложения?",
@@ -5053,7 +5133,7 @@
       "update" : {
         "title" : "Прервать обновление приложения?",
         "description" : "При выходе из вкладки «Мой Ledger» обновление приложения прервётся.",
-        "stay" : "Завершить обновления"
+        "stay" : "Дождаться"
       },
       "quit" : "Закрыть «Мой Ledger»"
     },
@@ -5062,8 +5142,8 @@
       "description" : "Удаляйте приложения Bitcoin или Ethereum в последнюю очередь"
     },
     "NetworkDown" : {
-      "title" : "Похоже, не работает Интернет",
-      "description" : "Проверьте подключение к Интернету."
+      "title" : "Похоже, отсутствует подключение",
+      "description" : "Попробуйте проверить подключение к интернету."
     },
     "NoAddressesFound" : {
       "title" : "К сожалению, счета не найдены",
@@ -5356,7 +5436,7 @@
       "description" : "Транзакцию необходимо подписать в течение 30 секунд. Пожалуйста, попробуйте ещё раз."
     },
     "TronNotEnoughEnergy" : {
-      "title" : "Не хватает баллов Энергии. Вы можете заплатить комиссию до 50 TRX."
+      "title" : "Не хватает баллов Энергии. Комиссия может достигать 50 TRX."
     },
     "PairingFailed" : {
       "title" : "Не удалось подключить устройство",
@@ -5510,6 +5590,9 @@
     "StellarBurnAddressError" : {
       "title" : "При попытке добавления счёта Stellar возникла проблема"
     },
+    "AvalancheMinimumAmountError" : {
+      "title" : "Минимальная сумма — 25 AVAX"
+    },
     "HederaAddAccountError" : {
       "title" : "Не удалось добавить счёт. Пожалуйста, попробуйте ещё раз."
     },
@@ -5520,6 +5603,10 @@
     "ImageLoadFromFileError" : {
       "title" : "Не удалось загрузить изображение из файла",
       "description" : "Попробуйте другое изображение"
+    },
+    "ImageLoadFromNftError" : {
+      "title" : "Не удалось загрузить изображение NFT",
+      "description" : "Попробуйте использовать другой NFT"
     },
     "ImageDownloadError" : {
       "title" : "Не удалось загрузить изображение",
@@ -5593,6 +5680,13 @@
       "descriptionWithProductName" : "Сначала {{ productName }} необходимо настроить.\nМы поможем вам с этим.",
       "goToOnboardingButton" : "Настроить устройство",
       "goToOnboardingButtonWithProductName" : "Настроить {{ productName }}"
+    },
+    "EtherscanAPIError" : {
+      "title" : "Сбой при загрузке транзакций",
+      "description" : "Произошла непредвиденная ошибка с обозревателями. Повторите попытку позже"
+    },
+    "GasEstimationError" : {
+      "title" : "Сбой расчёта стоимости Газа"
     }
   },
   "cryptoOrg" : {
@@ -5631,7 +5725,13 @@
         "stepLabel" : "Выбрать изображение",
         "description" : "Выберите изображение для использования в качестве (...)",
         "pickFromNftGallery" : "Выбрать из галереи NFT",
-        "upload" : "Загрузить с ПК"
+        "myNfts" : "Мои NFT",
+        "upload" : "Загрузить с ПК",
+        "chooseNft" : "Выбрать NFT",
+        "selectNft" : "Выбрать NFT",
+        "previousSelectNft" : "Назад",
+        "nftEmptyStateTitle" : "Пока тут ничего нет",
+        "nftEmptyStateDescription" : "Сначала добавьте NFT в кошелёк"
       },
       "adjust" : {
         "stepLabel" : "Изменить изображение",
@@ -5657,5 +5757,37 @@
     },
     "customImageSet" : "Изображение установлено",
     "finishCTA" : "Завершить"
+  },
+  "onboardingAppInstall" : {
+    "restore" : {
+      "title" : "Установить те же приложения, что и на {{deviceName}}?",
+      "titleNoDeviceName" : "Установить те же приложения, что и на предыдущем устройстве Ledger?",
+      "subtitle" : "Установить или удалить приложения можно в любое время.",
+      "installCTA" : "Восстановить приложения",
+      "skipCTA" : "Отложить"
+    },
+    "default" : {
+      "title" : "{{ productName }} использует приложения для безопасных блокчейн-транзакций",
+      "subtitle" : "Рекомендуем загрузить стандартный набор приложений. Позже можно будет установить больше приложений.",
+      "installCTA" : "Установить приложения",
+      "skipCTA" : "Отложить"
+    },
+    "progress" : {
+      "loading" : "Загружаем...",
+      "resolving" : "Устраняем зависимости приложения...",
+      "progress" : "Установка приложений: {{progress}}%",
+      "disclaimer" : "Добавляйте или удаляйте приложения в любое время с помощью Ledger Live."
+    },
+    "cancelled" : {
+      "title" : "Установка приложения на {{productName}} отменена",
+      "subtitle" : "{{productName}} нужны блокчейн-приложения для одобрения транзакций и операций с NFT.",
+      "installCTA" : "Установить",
+      "skipCTA" : "Отложить"
+    },
+    "locked" : {
+      "title" : "Устройство {{productName}} заблокировано",
+      "subtitle" : "Разблокируйте {{productName}} и повторите попытку установки.",
+      "installCTA" : "Повторить установку"
+    }
   }
 }
