--- a/apps/ledger-live-desktop/static/i18n/en/app.json
+++ b/apps/ledger-live-desktop/static/i18n/en/app.json
@@ -823,8 +823,11 @@
         "linkText": "What is redelegation and how long does it take?",
         "solana": {
           "title": "Did you know?",
-          "description": "Ledger offers a lower commission rate than your validator.This process can take up to 4 days.",
-          "cta": "Redelegate with Ledger"
+          "description": "Ledger offers a lower commission rate than your validator.This process can take up to 4 days."
+        },
+        "near": {
+          "title": "Did you know?",
+          "description": "Ledger offers a lower commission rate than your validator.This process can take up to 65 hours."
         }
       },
       "delegation": {
@@ -843,6 +846,9 @@
             "description": "Got more than 32 ETH? Earn passive rewards by securely staking your ETH with Kiln.",
             "cta": "Stake with Kiln"
           }
+        },
+        "near": {
+          "description": "Stake your NEAR with Ledger by Figment validator. Your coins stay yours, backed by Ledger’s uncompromising security."
         }
       }
     }
