File apps/ledger-live-mobile/src/locales/en/common.json was updated on ru-RU locale

--- a/apps/ledger-live-mobile/src/locales/ru/common.json
+++ b/apps/ledger-live-mobile/src/locales/ru/common.json
@@ -414,8 +414,8 @@
       "title" : "Указанная макс. комиссия слишком мала. Подписание операции может занять длительное время"
     },
     "NetworkDown" : {
-      "title" : "Похоже, не работает Интернет",
-      "description" : "Пожалуйста, проверьте подключение к Интернету."
+      "title" : "Похоже, отсутствует подключение",
+      "description" : "Попробуйте проверить подключение к интернету."
     },
     "NoAddressesFound" : {
       "title" : "К сожалению, счетов не обнаружено",
@@ -549,7 +549,7 @@
       "description" : "Транзакции необходимо подписать в течение 30 секунд. Пожалуйста, попробуйте ещё раз."
     },
     "TronNotEnoughEnergy" : {
-      "title" : "Не хватает баллов Энергии. Вы можете заплатить комиссию до 50 TRX."
+      "title" : "Не хватает баллов Энергии. Комиссия может достигать 50 TRX."
     },
     "UpdateYourApp" : {
       "title" : "Необходимо обновить приложения",
@@ -811,6 +811,13 @@
       "title" : "Устройство заблокировано",
       "description" : "Разблокируйте устройство и повторите попытку.",
       "descriptionWithProductName" : "Разблокируйте {{ productName }} и повторите попытку."
+    },
+    "EtherscanAPIError" : {
+      "title" : "Сбой при загрузке транзакций",
+      "description" : "Произошла непредвиденная ошибка с обозревателями. Повторите попытку позже"
+    },
+    "GasEstimationError" : {
+      "title" : "Сбой расчёта стоимости Газа"
     }
   },
   "crash" : {
@@ -1263,12 +1270,11 @@
       "restoreDevice" : {
         "label" : "Восстановление устройства",
         "subTitle" : "Ввести фразу восстановления на новом устройстве",
-        "desc" : "Воспользуйтесь мнемонической фразой, чтобы восстановить приватные ключи на новом Nano!"
+        "desc" : "Воспользуйтесь мнемонической фразой, чтобы восстановить приватные ключи на новом Nano."
       },
       "recovery" : "Есть фраза восстановления?",
       "protect" : {
-        "label" : "~60 мин.",
-        "subTitle" : "Восстановить с помощью Protect"
+        "subTitle" : "Restore using Ledger Recover"
       }
     },
     "stepNewDevice" : {
@@ -2558,7 +2564,7 @@
         "goToSettings" : "Перейдите в настройки системы"
       },
       "allowed" : {
-        "title" : "Допуск уведомлений",
+        "title" : "Уведомления",
         "desc" : "Получайте уведомления о криптоактивах, ситуации на рынке и не только"
       },
       "transactions" : {
@@ -2585,7 +2591,7 @@
         "title" : "Уведомления о курсах",
         "desc" : "Настраивайте оповещения о курсах любимых криптовалют, чтобы не пропустить движения рынка"
       },
-      "disclaimer" : "Конфиденциальность данных — главный приоритет для Ledger. Поэтому собранная информация никогда не передаётся нашим партнёрам."
+      "disclaimer" : "Конфиденциальность данных — главный приоритет для Ledger. Поэтому собранная информация никогда не передаётся сторонним операторам услуг."
     },
     "help" : {
       "title" : "Помощь",
@@ -2600,12 +2606,12 @@
       "clearCacheModal" : "Вы уверены?",
       "clearCacheModalDesc" : "Мы проведём полное сканирование транзакций в сети. История счетов будет восстановлена, а средства на балансе будут пересчитаны.",
       "clearCacheButton" : "Очистить",
-      "exportLogs" : "Сохранение логов",
+      "exportLogs" : "Сохранить логи",
       "exportLogsDesc" : "Сохранённые логи Ledger Live могут потребоваться для устранения неполадок.",
       "resetThirdPartyData" : "Сброс данных посредников",
       "resetThirdPartyDataDesc" : "Удалите все данные посредников, использованные для доступа к сторонним поставщикам услуг.",
       "resetThirdPartyDataModal" : "Удаление данных посредников",
-      "resetThirdPartyDataModalDesc" : "Удалите данные посредников. Чтобы получить доступ к услугам наших партнёров, вам может потребоваться заново пройти KYC и/или авторизоваться.",
+      "resetThirdPartyDataModalDesc" : "Удалите данные посредников. Чтобы получить доступ к услугам сторонних операторов, может потребоваться заново пройти KYC и/или авторизоваться.",
       "hardReset" : "Сброс Ledger Live",
       "hardResetDesc" : "Это действие не затрагивает активы и позволяет удалить все данные в Ledger Live, включая данные счетов, историю транзакций и настройки. Используйте устройство Ledger для перезагрузки криптоактивов и управления ими в Ledger Live с исходными настройками.",
       "repairDevice" : "Ремонт устройства Ledger",
@@ -3298,6 +3304,10 @@
           }
         }
       }
+    },
+    "walletConnect" : {
+      "title" : "WalletConnect",
+      "description" : "Подключить кошелёк к децентрализованным приложениям"
     }
   },
   "signMessage" : {
@@ -3415,7 +3425,7 @@
     },
     "info" : {
       "maxSpendable" : {
-        "title" : "Сколько можно отправить",
+        "title" : "Вы можете отправить",
         "description" : "Максимальная расходуемая сумма — это баланс средств на счету, которые можно отправить."
       }
     }
@@ -3954,8 +3964,8 @@
       "default" : "По умолчанию",
       "name_asc" : "Название А-Я",
       "name_desc" : "Название Я-А",
-      "marketcap_desc" : "Рын. капитализация",
-      "marketcap" : "Рын. капитализация",
+      "marketcap_desc" : "Капитализация",
+      "marketcap" : "Капитализация",
       "name" : "Название"
     }
   },
@@ -4059,7 +4069,7 @@
     }
   },
   "deviceLocalization" : {
-    "language" : "Язык интерфейса",
+    "language" : "Язык устройства",
     "deviceLanguage" : "Язык устройства",
     "chooseLanguage" : "Выберите язык для {{deviceName}}.",
     "changeLanguage" : "Поменять язык",
@@ -5678,11 +5688,11 @@
       }
     },
     "status" : {
-      "title" : "Некоторые неполадки требуют вашего внимания",
-      "title_plural" : "Некоторые неполадки требуют вашего внимания",
+      "title" : "Обратите внимание",
+      "title_plural" : "Обратите внимание",
       "desc" : {
         "0" : "Они изучаются и скоро будут исправлены.",
-        "1" : "Если вы столкнулись с какой-либо неполадкой из указанных, свяжитесь с <0>Поддержкой Ledger</0>"
+        "1" : "Если вы столкнулись с чем-то из этого, свяжитесь с <0>Поддержкой Ledger</0>"
       },
       "cta" : {
         "ok" : "Понятно"
